fix overflow issue

--- a/src/modules/Sidebar/styles.css
+++ b/src/modules/Sidebar/styles.css
@@ -3,3 +3,8 @@
   min-height: 100vh;
   /*background-color: white;*/
 }
+
+.chat-group {
+  overflow-y: auto;
+  max-height: calc(100vh - 114px);
+}
